Update the code to keep the same transfer data between functions and not to search again in the db the transfer

--- a/src/etools/applications/last_mile/templates/emails/wastage_transfer.html
+++ b/src/etools/applications/last_mile/templates/emails/wastage_transfer.html
@@ -210,31 +210,31 @@
                               <tr >
                                  <td class="wrapper" style="font-family:sans-serif;font-size:14px;vertical-align:top;
                                            box-sizing:border-box;padding:10px;">
-                                     {{ transfer.partner_organization.vendor_number }}
+                                     {{ transfer.partner_organization_vendor_number }}
                                  </td>
                                  <td class="wrapper" style="font-family:sans-serif;font-size:14px;vertical-align:top;
                                            box-sizing:border-box;padding:10px;">
-                                     {{ transfer.partner_organization.organization.name }}
+                                     {{ transfer.partner_organization_name }}
                                  </td>
                                  <td class="wrapper" style="font-family:sans-serif;font-size:14px;vertical-align:top;
                                            box-sizing:border-box;padding:10px;">
-                                     {% if transfer.destination_check_in_at %}{{ transfer.destination_check_in_at|date:'d/m/Y' }}{% else %}{{ transfer.origin_check_out_at|date:'d/m/Y' }}{% endif %}
+                                     {% if transfer.destination_check_in_at %}{{ transfer.destination_check_in_at }}{% else %}{{ transfer.origin_check_out_at }}{% endif %}
                                  </td>
                                  <td class="wrapper" style="font-family:sans-serif;font-size:14px;vertical-align:top;
                                            box-sizing:border-box;padding:10px;">
-                                     {% if transfer.checked_in_by %}{{ transfer.checked_in_by.full_name }}{% else %}{{ transfer.checked_out_by.full_name }}{% endif %}
+                                     {% if transfer.checked_in_by %}{{ transfer.checked_in_by_full_name }}{% else %}{{ transfer.checked_out_by_full_name }}{% endif %}
                                  </td>
                                  <td class="wrapper" style="font-family:sans-serif;font-size:14px;vertical-align:top;
                                            box-sizing:border-box;padding:10px;">
-                                    {{ transfer.destination_point.name }}
+                                    {{ transfer.destination_point_name }}
                                  </td>
                                  <td class="wrapper" style="font-family:sans-serif;font-size:14px;vertical-align:top;
                                            box-sizing:border-box;padding:10px;">
-                                     {{ transfer.destination_point.parent }}
+                                     {{ transfer.destination_point_parent }}
                                  </td>
                                  <td class="wrapper" style="font-family:sans-serif;font-size:14px;vertical-align:top;
                                            box-sizing:border-box;padding:10px;">
-                                    {{ transfer.destination_point.parent.name }} 
+                                    {{ transfer.destination_point_parent_name }} 
                                  </td>
                                  <td class="wrapper" style="font-family:sans-serif;font-size:14px;vertical-align:top;
                                            box-sizing:border-box;padding:10px;">
@@ -282,16 +282,16 @@
                                     <span style="color: white;font-weight: bold;">Reason for Wastage</span>
                                 </td>
                               </tr>
-                              {% for item in transfer|all_items %}
+                              {% for item in transfer.items %}
                                   </tr>
                                   <tr >
                                      <td class="wrapper" style="font-family:sans-serif;font-size:14px;vertical-align:top;
                                                box-sizing:border-box;padding:10px;">
-                                         {{ item.material.number }}
+                                         {{ item.material_number }}
                                      </td>
                                      <td class="wrapper" style="font-family:sans-serif;font-size:14px;vertical-align:top;
                                                box-sizing:border-box;padding:10px;">
-                                         {% if item.description %}{{ item.description }}{% else %}{{ item.material.short_description }}{% endif %}
+                                         {% if item.description %}{{ item.description }}{% else %}{{ item.material_short_description }}{% endif %}
                                      </td>
                                      <td class="wrapper" style="font-family:sans-serif;font-size:14px;vertical-align:top;
                                                box-sizing:border-box;padding:10px;">
@@ -299,7 +299,7 @@
                                      </td>
                                      <td class="wrapper" style="font-family:sans-serif;font-size:14px;vertical-align:top;
                                                box-sizing:border-box;padding:10px;">
-                                         {% if item.uom %}{{ item.uom }}{% else %}{{ item.material.original_uom }}{% endif %}
+                                         {% if item.uom %}{{ item.uom }}{% else %}{{ item.material_original_uom }}{% endif %}
                                      </td>
                                      <td class="wrapper" style="font-family:sans-serif;font-size:14px;vertical-align:top;
                                                box-sizing:border-box;padding:10px;">
@@ -307,7 +307,7 @@
                                      </td>
                                      <td class="wrapper" style="font-family:sans-serif;font-size:14px;vertical-align:top;
                                                box-sizing:border-box;padding:10px;">
-                                         {{ item.expiry_date|date:'d/m/Y' }}
+                                         {{ item.expiry_date }}
                                      </td>
                                      <td class="wrapper" style="font-family:sans-serif;font-size:14px;vertical-align:top;
                                                box-sizing:border-box;padding:10px;">
