--- a/src/etools/applications/last_mile/templates/emails/wastage_transfer.html
+++ b/src/etools/applications/last_mile/templates/emails/wastage_transfer.html
@@ -210,11 +210,11 @@
                               <tr >
                                  <td class="wrapper" style="font-family:sans-serif;font-size:14px;vertical-align:top;
                                            box-sizing:border-box;padding:10px;">
-                                     {{ transfer.partner_organization_vendor_number }}
+                                     {{ transfer.partner_organization.vendor_number }}
                                  </td>
                                  <td class="wrapper" style="font-family:sans-serif;font-size:14px;vertical-align:top;
                                            box-sizing:border-box;padding:10px;">
-                                     {{ transfer.partner_organization_name }}
+                                     {{ transfer.partner_organization.name }}
                                  </td>
                                  <td class="wrapper" style="font-family:sans-serif;font-size:14px;vertical-align:top;
                                            box-sizing:border-box;padding:10px;">
@@ -222,19 +222,19 @@
                                  </td>
                                  <td class="wrapper" style="font-family:sans-serif;font-size:14px;vertical-align:top;
                                            box-sizing:border-box;padding:10px;">
-                                     {% if transfer.checked_in_by %}{{ transfer.checked_in_by_full_name }}{% else %}{{ transfer.checked_out_by_full_name }}{% endif %}
+                                     {% if transfer.checked_in_by %}{{ transfer.checked_in_by.name }}{% else %}{{ transfer.checked_out_by.name }}{% endif %}
                                  </td>
                                  <td class="wrapper" style="font-family:sans-serif;font-size:14px;vertical-align:top;
                                            box-sizing:border-box;padding:10px;">
-                                    {{ transfer.destination_point_name }}
+                                    {{ transfer.destination_point.name }}
                                  </td>
                                  <td class="wrapper" style="font-family:sans-serif;font-size:14px;vertical-align:top;
                                            box-sizing:border-box;padding:10px;">
-                                     {{ transfer.destination_point_parent }}
+                                     {{ transfer.destination_point.parent_name }}
                                  </td>
                                  <td class="wrapper" style="font-family:sans-serif;font-size:14px;vertical-align:top;
                                            box-sizing:border-box;padding:10px;">
-                                    {{ transfer.destination_point_parent_name }} 
+                                    {{ transfer.destination_point.region }} 
                                  </td>
                                  <td class="wrapper" style="font-family:sans-serif;font-size:14px;vertical-align:top;
                                            box-sizing:border-box;padding:10px;">
@@ -287,11 +287,11 @@
                                   <tr >
                                      <td class="wrapper" style="font-family:sans-serif;font-size:14px;vertical-align:top;
                                                box-sizing:border-box;padding:10px;">
-                                         {{ item.material_number }}
+                                         {{ item.material.number }}
                                      </td>
                                      <td class="wrapper" style="font-family:sans-serif;font-size:14px;vertical-align:top;
                                                box-sizing:border-box;padding:10px;">
-                                         {% if item.description %}{{ item.description }}{% else %}{{ item.material_short_description }}{% endif %}
+                                         {% if item.description %}{{ item.description }}{% else %}{{ item.material.short_description }}{% endif %}
                                      </td>
                                      <td class="wrapper" style="font-family:sans-serif;font-size:14px;vertical-align:top;
                                                box-sizing:border-box;padding:10px;">
@@ -299,7 +299,7 @@
                                      </td>
                                      <td class="wrapper" style="font-family:sans-serif;font-size:14px;vertical-align:top;
                                                box-sizing:border-box;padding:10px;">
-                                         {% if item.uom %}{{ item.uom }}{% else %}{{ item.material_original_uom }}{% endif %}
+                                         {% if item.uom %}{{ item.uom }}{% else %}{{ item.material.original_uom }}{% endif %}
                                      </td>
                                      <td class="wrapper" style="font-family:sans-serif;font-size:14px;vertical-align:top;
                                                box-sizing:border-box;padding:10px;">
