--- a/src/etools/applications/field_monitoring/planning/templates/fm/visit_pdf.html
+++ b/src/etools/applications/field_monitoring/planning/templates/fm/visit_pdf.html
@@ -161,6 +161,10 @@
                         <span class="value">{{ finding.grouper }}</span>
                     </div>
                     {% for finding in finding.list %}
+                        <div>
+                            <span class="label">STATUS:</span>
+                            <span class="value">{% if finding.on_track == True %} On Track {% else %} Not Monitored {% endif %}</span>
+                        </div>
                         <div class="value">
                             {{ finding.narrative_finding|safe|default:"-"|linebreaks }}
                         </div>
