--- a/src/etools/applications/field_monitoring/planning/templates/fm/visit_pdf.html
+++ b/src/etools/applications/field_monitoring/planning/templates/fm/visit_pdf.html
@@ -163,7 +163,12 @@
                     {% for finding in finding.list %}
                         <div>
                             <span class="label">STATUS:</span>
-                            <span class="value">{% if finding.on_track == True %} On Track {% else %} Not Monitored {% endif %}</span>
+                            <span class="value">
+                                {% if finding.on_track == True %} On Track
+                                {% elif finding.on_track == False %} Off Track
+                                {% else %} Not Monitored
+                                {% endif %}
+                            </span>
                         </div>
                         <div class="value">
                             {{ finding.narrative_finding|safe|default:"-"|linebreaks }}
