Change logo to correct url

--- a/src/etools/applications/last_mile/templates/emails/last_mile_users.html
+++ b/src/etools/applications/last_mile/templates/emails/last_mile_users.html
@@ -280,7 +280,7 @@
                         <a href="https://unicef.org" target="_blank"
                            style="color:#0099FF;text-decoration:underline;">
 
-                           <img src='https://etools.unicef.org/pmp/images/UNICEF_logo.png'
+                           <img src='https://etools.unicef.org/pmp/assets/images/UNICEF_logo.webp'
                                 alt="Unicef" class="logo-unicef" width="101" height="24"
                                 style="border:none;-ms-interpolation-mode:bicubic;max-width:100%;
                                        display:block;margin:0;padding:0;width:101px;height:24px;"/>
